--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,7 +16,19 @@ spring:
 server:
   port: 7001
 
+
 custom:
   book-service-header-name: X-BookID
   storage:
       type: db
+
+logging:
+  level:
+    root: warn
+
+# Actuator (monitoring) config
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,env,beans
